; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-circular-queue.c_queue_fetch_or_alloc.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-circular-queue.c_queue_fetch_or_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ff_circular_queue = type { i8**, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.ff_circular_queue*, i32)* @queue_fetch_or_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @queue_fetch_or_alloc(%struct.ff_circular_queue* %0, i32 %1) #0 {
  %3 = alloca %struct.ff_circular_queue*, align 8
  %4 = alloca i32, align 4
  store %struct.ff_circular_queue* %0, %struct.ff_circular_queue** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.ff_circular_queue*, %struct.ff_circular_queue** %3, align 8
  %6 = getelementptr inbounds %struct.ff_circular_queue, %struct.ff_circular_queue* %5, i32 0, i32 0
  %7 = load i8**, i8*** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds i8*, i8** %7, i64 %9
  %11 = load i8*, i8** %10, align 8
  %12 = icmp eq i8* %11, null
  br i1 %12, label %13, label %24

13:                                               ; preds = %2
  %14 = load %struct.ff_circular_queue*, %struct.ff_circular_queue** %3, align 8
  %15 = getelementptr inbounds %struct.ff_circular_queue, %struct.ff_circular_queue* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = call i8* @av_mallocz(i32 %16)
  %18 = load %struct.ff_circular_queue*, %struct.ff_circular_queue** %3, align 8
  %19 = getelementptr inbounds %struct.ff_circular_queue, %struct.ff_circular_queue* %18, i32 0, i32 0
  %20 = load i8**, i8*** %19, align 8
  %21 = load i32, i32* %4, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i8*, i8** %20, i64 %22
  store i8* %17, i8** %23, align 8
  br label %24

24:                                               ; preds = %13, %2
  %25 = load %struct.ff_circular_queue*, %struct.ff_circular_queue** %3, align 8
  %26 = getelementptr inbounds %struct.ff_circular_queue, %struct.ff_circular_queue* %25, i32 0, i32 0
  %27 = load i8**, i8*** %26, align 8
  %28 = load i32, i32* %4, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i8*, i8** %27, i64 %29
  %31 = load i8*, i8** %30, align 8
  ret i8* %31
}

declare dso_local i8* @av_mallocz(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
